tests/quick_start/quick_start.exp

Stop any already-running server.

Quick start.

Expect no errors.
No errors!

The Flow server is currently in filesystem lazy mode and is only checking 0/1 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

Change @flow file, expect error.
Error --------------------------------------------------------------------------------------------------------- a.js:4:2

Cannot cast `0` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   a.js:4:2
   4| (0: string);
       ^ [1]

References:
   a.js:4:5
   4| (0: string);
          ^^^^^^ [2]



Found 1 error

The Flow server is currently in filesystem lazy mode and is only checking 1/1 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

Make file @noflow, expect error to go away.
No errors!

The Flow server is currently in filesystem lazy mode and is only checking 0/0 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

Revert file, expect error again.
Error --------------------------------------------------------------------------------------------------------- a.js:4:2

Cannot cast `0` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   a.js:4:2
   4| (0: string);
       ^ [1]

References:
   a.js:4:5
   4| (0: string);
          ^^^^^^ [2]



Found 1 error

The Flow server is currently in filesystem lazy mode and is only checking 1/1 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

Done!
